--- a/css/responsive.css
+++ b/css/responsive.css
@@ -67,7 +67,7 @@
 		display: block;
 		width: 25px;
 		height: 3px;
-		background: #8490ff;
+		background: #fff;
 		margin: auto;
 		margin-bottom: 4px;
 		transition: all 400ms linear;
