--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -45,6 +45,10 @@ button:focus {
 .p_120 {
   padding-top: 120px;
   padding-bottom: 120px; }
+
+.p_80 {
+  padding-top: 80px;
+  padding-bottom: 80px; }
   
 .p_20 {
   padding-top: 20px;
