--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -32,6 +32,10 @@ body {
   
 }
 
+.active a{
+	color: #8490ff!important; 
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Heebo", sans-serif;
   font-weight: bold; 
