--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -111,7 +111,7 @@ button:focus {
 
 .home_left_img img{
     border-style:ridge!important;
-    border-radius: 10px;
+    border-radius: 50%;
 }
 	
 /*----------------------------------------------------*/
