--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -112,6 +112,8 @@ button:focus {
 .home_left_img img{
     border-style:ridge!important;
     border-radius: 50%;
+    background: radial-gradient(circle at center, transparent 61%);
+    overflow: hidden;
 }
 	
 /*----------------------------------------------------*/
