--- a/css/responsive.css
+++ b/css/responsive.css
@@ -259,8 +259,8 @@
 }
 @media (max-width:575px){
 	.slider_theme {
-	  width: 300px;
-	  text-align: center;
+/* 	  width: 300px; */
+/* 	  text-align: center; */
 	  overflow: hidden;
 	}
 
