--- a/css/responsive.css
+++ b/css/responsive.css
@@ -258,10 +258,16 @@
 	
 }
 @media (max-width:575px){
+	/*Sliders==============*/
+	
+	* {
+	  box-sizing: border-box;
+	}
+
 	.slider_theme {
-/* 	  width: 300px; */
-/* 	  text-align: center; */
-/* 	  overflow: hidden; */
+	  width: 300px;
+	  text-align: center;
+	  overflow: hidden;
 	}
 
 	.slides_theme {
@@ -270,19 +276,22 @@
 	  overflow-x: auto;
 	  scroll-snap-type: x mandatory;
 
+
+
 	  scroll-behavior: smooth;
 	  -webkit-overflow-scrolling: touch;
 
-	/*   scroll-snap-points-x: repeat(300px);
-	  scroll-snap-type: mandatory; */
-
+	  /*
+	  scroll-snap-points-x: repeat(300px);
+	  scroll-snap-type: mandatory;
+	  */
 	}
 	.slides_theme::-webkit-scrollbar {
-/* 	  width: 10px; */
-/* 	  height: 10px; */
+	  width: 10px;
+	  height: 10px;
 	}
 	.slides_theme::-webkit-scrollbar-thumb {
-	  background: #8490ff;
+	  background: black;
 	  border-radius: 10px;
 	}
 	.slides_theme::-webkit-scrollbar-track {
@@ -291,18 +300,46 @@
 	.slides_theme > div {
 	  scroll-snap-align: start;
 	  flex-shrink: 0;
-/* 	  margin-right: 50px; */
-/* 	  border-radius: 10px; */
+	  width: 300px;
+	  height: 300px;
+	  margin-right: 50px;
+	  border-radius: 10px;
+	  background: #eee;
 	  transform-origin: center center;
 	  transform: scale(1);
 	  transition: transform 0.5s;
-/* 	  position: relative; */
+	  position: relative;
 
 	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	  font-size: 100px;
 	}
-	.slides_theme> div:target {
+	.slides_theme > div:target {
 	/*   transform: scale(0.8); */
 	}
+
+	/* Don't need button navigation */
+	@supports (scroll-snap-type) {
+	  .slider_theme > a {
+	    display: none;
+	  }
+	}
+
+	html, body {
+	  height: 100%;
+	  overflow: hidden;
+	}
+	body {
+	  display: flex;
+	  align-items: center;
+	  justify-content: center;
+	  background: linear-gradient(to bottom, #74ABE2, #5563DE);
+	  font-family: 'Ropa Sans', sans-serif;
+	}
+
+	
+	/*Sliders=============*/
 
 /* 	.img-fluid{
 		position: center;
