--- a/css/responsive.css
+++ b/css/responsive.css
@@ -261,12 +261,12 @@
 	/*Sliders========================================================================================================================*/
 	
 	* {
-/* 	  box-sizing: border-box; */
+	  box-sizing: border-box;
 	}
 
 	.slider_theme {
 /* 	  width: 300px; */
-/* 	  text-align: center; */
+	  text-align: center;
 /* 	  overflow: hidden; */
 	}
 
