--- a/css/responsive.css
+++ b/css/responsive.css
@@ -299,10 +299,10 @@
 	  scroll-snap-align: start;
 	  flex-shrink: 0;
 	  width: 300x;
-/* 	  height: 300px; */
+	  height: 300px;
 	  margin-right: 50px;
 	  border-radius: 10px;
-/* 	  background: #eee; */
+	  background: inherit;
 /* 	  transform-origin: center center; */
 /* 	  transform: scale(1); */
 /* 	  transition: transform 0.5s; */
