--- a/css/responsive.css
+++ b/css/responsive.css
@@ -299,14 +299,14 @@
 	  scroll-snap-align: start;
 	  flex-shrink: 0;
 	  width: 300px;
-	  height: 300px;
+	  height: 450px;
 	  margin-right: 50px;
 	  border-radius: 10px;
 	  background: inherit;
-/* 	  transform-origin: center center; */
-/* 	  transform: scale(1); */
-/* 	  transition: transform 0.5s; */
-/* 	  position: relative; */
+	  transform-origin: center center;
+	  transform: scale(1);
+	  transition: transform 0.5s;
+	  position: relative;
 
 	  display: flex;
 	  justify-content: center;
