--- a/css/responsive.css
+++ b/css/responsive.css
@@ -260,9 +260,9 @@
 @media (max-width:575px){
 	/*Sliders========================================================================================================================*/
 	
-/* 	* {
+	* {
 	  box-sizing: border-box;
-	} */
+	}
 
 	.slider_theme {
 	  width: 300px;
@@ -279,10 +279,9 @@
 	  scroll-behavior: smooth;
 	  -webkit-overflow-scrolling: touch;
 
-	  /*
 	  scroll-snap-points-x: repeat(300px);
 	  scroll-snap-type: mandatory;
-	  */
+	 
 	}
 	.slides_theme::-webkit-scrollbar {
 	  width: 10px;
