--- a/css/responsive.css
+++ b/css/responsive.css
@@ -298,14 +298,14 @@
 	  scroll-snap-align: start;
 	  flex-shrink: 0;
 	  width: 300px;
-	  height: 450px;
+	  height: 100%;
 	  margin-right: 50px;
 	  border-radius: 10px;
 	  background: inherit;
 	  transform-origin: center center;
 	  transform: scale(1);
 	  transition: transform 0.5s;
-	  position: relative;
+	  position: inline;
 
 	  display: flex;
 	  justify-content: center;
