--- a/css/responsive.css
+++ b/css/responsive.css
@@ -267,7 +267,7 @@
 	.slider_theme {
 	  width: 300px;
 	  text-align: center;
-/* 	  overflow: hidden; */
+	  overflow: hidden;
 	}
 
 	.slides_theme {
