--- a/css/responsive.css
+++ b/css/responsive.css
@@ -298,7 +298,7 @@
 	  scroll-snap-align: start;
 	  flex-shrink: 0;
 	  width: 300px;
-	  height: 100%;
+	  height: 400px;
 	  margin-right: 50px;
 	  border-radius: 10px;
 	  background: inherit;
