--- a/css/responsive.css
+++ b/css/responsive.css
@@ -261,13 +261,13 @@
 	/*Sliders========================================================================================================================*/
 	
 	* {
-/* 	  box-sizing: border-box; */
+	  box-sizing: border-box;
 	}
 
 	.slider_theme {
 	  width: 300px;
 	  text-align: center;
-/* 	  overflow: hidden; */
+	  overflow: hidden;
 	}
 
 	.slides_theme {
@@ -279,8 +279,8 @@
 	  scroll-behavior: smooth;
 	  -webkit-overflow-scrolling: touch;
 
-/* 	  scroll-snap-points-x: repeat(300px);
-	  scroll-snap-type: mandatory; */
+	  scroll-snap-points-x: repeat(300px);
+	  scroll-snap-type: mandatory;
 	 
 	}
 	.slides_theme::-webkit-scrollbar {
