--- a/css/responsive.css
+++ b/css/responsive.css
@@ -258,7 +258,13 @@
 	
 }
 @media (max-width:575px){
-	/*Sliders========================================================================================================================*/
+	
+	  .row {
+	    flex-wrap: nowrap !important;
+	    overflow: auto !important;
+	  }
+	
+/* 	/*Sliders========================================================================================================================*/
 	
 	* {
 	  box-sizing: border-box;
@@ -329,7 +335,7 @@
 	} */
 
 	
-	/*Sliders==================================================================================================================*/
+	/*Sliders==================================================================================================================*/ */
 
 /* 	.img-fluid{
 		position: center;
