--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -577,7 +577,7 @@ h6 {
   .projects_item:before {
     content: "";
     background: rgba(255, 255, 255, 0.8);
-    position: absolute;
+/*     position: absolute; */
     left: 0px;
     top: 0px;
     width: 100%;
@@ -585,7 +585,7 @@ h6 {
     opacity: 0;
     transition: all 300ms ease; }
   .projects_item .projects_text {
-    position: absolute;
+/*     position: absolute; */
     left: 0px;
     bottom: 30px;
     padding-left: 30px;
