--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -570,7 +570,7 @@ h6 {
   margin-bottom: -30px; }
 
 .projects_item {
-  position: absolute;
+  position: relative;
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 30px; }
