--- a/css/responsive.css
+++ b/css/responsive.css
@@ -256,13 +256,13 @@
 @media (max-width:600px){
 	
 	* {
-/*   box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 .slider_theme {
-  width: 300px;
+  width: 100%;
   text-align: center;
-/*   overflow: hidden; */
+  overflow: hidden;
 }
 
 .slides_theme {
@@ -295,11 +295,11 @@
 .slides_theme > div {
   scroll-snap-align: start;
   flex-shrink: 0;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   margin-right: 50px;
   border-radius: 10px;
-  background: #eee;
+/*   background: #eee; */
   transform-origin: center center;
   transform: scale(1);
   transition: transform 0.5s;
@@ -311,7 +311,7 @@
 /*   font-size: 100px; */
 }
 .slides_theme > div:target {
-  transform: scale(0.8);
+/*   transform: scale(0.8); */
 }
 
 
