--- a/css/style_updated.css
+++ b/css/style_updated.css
@@ -307,13 +307,13 @@ button:focus {
     font-size: 12px;
     font-family: "Roboto", sans-serif; }
 .l_blog_item .l_blog_text h4 {
-  font-size: 21px;
+  font-size: 18px;
   /*color: #222222;*/
   margin-bottom: 20px;
   transition: all 300ms linear 0s;
   font-family: "Heebo", sans-serif;
   font-weight: bold;
-  text-transform: uppercase;
+/*   text-transform: uppercase; */
   max-width: 300px; }
   .l_blog_item .l_blog_text h4:hover {
     /*color: #8490ff;*/ }
@@ -591,13 +591,13 @@ h6 {
     padding-left: 30px;
     padding-right: 30px; }
     .projects_item .projects_text h4 {
-      font-size: 21px;
+      font-size: 18px;
       font-family: "Heebo", sans-serif;
       font-weight: bold;
    /*   color: #222222;*/
       margin-bottom: 5px;
       transition: all 300ms linear 0s;
-      text-transform: uppercase;
+/*       text-transform: uppercase; */
       cursor: pointer; }
     .projects_item .projects_text p {
       margin-bottom: 0px;
